# Project_Jarvin_Assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  TODO.md  docker-compose.yml  fly.toml  install.sh  pyproject.toml  render.yaml  start.sh
agent/: llm.py  loop.py  personas.py  tools.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/graph/: page.tsx
frontend/app/stats/: page.tsx
frontend/components/: Chat.tsx  Graph3D.tsx  JarvisAvatar.tsx  Nav.tsx  PendingBanner.tsx  Sidebar.tsx
frontend/lib/: api.ts
integrations/: alerts.py  browser.py  calendar.py  followups.py  gdrive.py  github_client.py  gmail.py  google_auth.py  gsheets.py  gtasks.py  info.py  journal.py  obsidian.py  scheduler.py  system_stats.py  telegram.py  tts.py  web.py
memory/: store.py
scripts/: encode-secrets.sh  start-backend.sh
systemd/: jarvis-backend.service  jarvis-frontend.service  jarvis-web.service
triggers/: cli.py  cron.py  webhook.py
~/Documents/Jarvis/Memoria/: Formazione e Carriera.md  Persone Importanti.md  Preferenze Organizzative.md
